deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: wilsondevops/flask-app:latest
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 5000
