service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app 
  labels:
    service: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - port: 5000
    targetPort: 5000
