web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  labels:
    service: flask-app
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: flask-app
  type: NodePort
