ingress-app.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: flask-app
          servicePort: 5000
